--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a href="komutlar.html" class="nav-link">Tüm Komutlar</a>
         </li>
                <li class="nav-item active">
-          <a href="https://instagram.com/em1rbolat" target="_blank" class="nav-link">İletişim</a>
+          <a href="https://instagram.com/cplusplus.exe" target="_blank" class="nav-link">İletişim</a>
         </li>
       </ul>
     </div>
@@ -42,7 +42,7 @@
       <div class="ana-kutu">
       <div class="yukari">
       <div class="sol">
-      <h1 class="isim" >Geveze..</h2>
+      <h1 class="isim" >Geveze..</h1>
       <br>
       <h5>Geveze Bot - Bir Bottan Daha Fazlası..</h5>
       <br>
@@ -55,6 +55,6 @@
     </div>
   </div>
   </div>
-</body>
-
+  </div>
+  </body>
 </html>
